refactor: drop .web from namespace

--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Layout/NavMenu.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿@using LupusBytes.Azure.EventHubs.LiveExplorer.Web.Contracts
+﻿@using LupusBytes.Azure.EventHubs.LiveExplorer.Contracts
 @inject HttpClient HttpClient;
 
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false));
