--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer/Components/App.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer/Components/App.razor
@@ -1,4 +1,4 @@
-﻿@using LupusBytes.Azure.EventHubs.LiveExplorer.Web.Client
+﻿@using LupusBytes.Azure.EventHubs.LiveExplorer.Client
 <!DOCTYPE html>
 <html lang="en">
 
