--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Pages/EventHub.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Pages/EventHub.razor
@@ -1,5 +1,5 @@
 @page "/event-hubs/{serviceKey}"
-@using LupusBytes.Azure.EventHubs.LiveExplorer.Web.Contracts
+@using LupusBytes.Azure.EventHubs.LiveExplorer.Contracts
 @using Microsoft.AspNetCore.SignalR.Client
 @inject HttpClient HttpClient
 @implements IAsyncDisposable
