--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/_Imports.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/_Imports.razor
@@ -6,6 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using LupusBytes.Azure.EventHubs.LiveExplorer.Web
-@using LupusBytes.Azure.EventHubs.LiveExplorer.Web.Components
 @using MudBlazor
+@using MudBlazor.Services
+@using LupusBytes.Azure.EventHubs.LiveExplorer.Client
