--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer/Components/_Imports.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer/Components/_Imports.razor
@@ -6,6 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using LupusBytes.Azure.EventHubs.LiveExplorer
+@using LupusBytes.Azure.EventHubs.LiveExplorer.Components
 @using MudBlazor
-@using MudBlazor.Services
-@using LupusBytes.Azure.EventHubs.LiveExplorer.Web.Client
