--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Layout/NavMenu.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Layout/NavMenu.razor
@@ -1,7 +1,6 @@
-﻿@using LupusBytes.Azure.EventHubs.LiveExplorer.Contracts
+@using LupusBytes.Azure.EventHubs.LiveExplorer.Contracts
 @inject HttpClient HttpClient;
 
-@rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false));
 
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home" Class="mt-2">Home</MudNavLink>
