--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer/Components/App.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer/Components/App.razor
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <Routes @rendermode="new InteractiveWebAssemblyRenderMode(prerender: false)" />
+    <Routes @rendermode="InteractiveWebAssembly" />
     <script src="_framework/blazor.web.js"></script>
     <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
 </body>
