--- a/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Pages/EventHub.razor
+++ b/src/LupusBytes.Azure.EventHubs.LiveExplorer.Client/Pages/EventHub.razor
@@ -9,6 +9,8 @@
     <MudTextField Immediate="true" T="string" Label="Event Hub message" @bind-Value="input" Required="true" RequiredError="A message is required!" Variant="Variant.Outlined" Placeholder="Enter your message..." Lines="3" />
 </MudForm>
 <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="@(!isValidInput)" OnClick="@(() => SubmitAsync())">Submit</MudButton>
+<br />
+<MudIconButton Icon="@CurrentIcon" Color="Color.Primary" Size="Size.Medium" OnClick="@(() => TogglePlayPause())" />
 
 @if (messages.Count > 0)
 {
